--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
     implementation project(':@react-native-community_netinfo')
     implementation project(':react-native-background-timer')
     implementation project(':react-native-vector-icons')
