--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-native-elements": "^1.1.0",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-qrcode-scanner": "^1.1.2",
+    "react-native-really-awesome-button": "^1.4.2",
     "react-native-sqlite-storage": "^3.3.10",
     "react-native-touchable-scale": "^2.0.0",
     "react-native-vector-icons": "^6.4.1",
